--- a/groupform.html
+++ b/groupform.html
@@ -42,6 +42,9 @@
                 <input type="text" placeholder="Type group name">
             </div>
             <div>
+                <textarea name="" id="" cols="30" rows="10" placeholder="write what the group is all about"></textarea>
+            </div>
+            <div>
                 <button>Create Group</button>
             </div>
 
